# rate_generator

./: .gitignore  Makefile  alembic.ini  config.py  docker-compose.local.yml  main.py  pyproject.toml
apis/rest_api/api_v1/: routers.py
db/: __init__.py  session.py
db/migrations/: env.py
db/migrations/versions/: 2022_12_07_1351-e97a41496d1f_.py
db/models/: __init__.py  base.py  ticker.py  ticker_value.py
