[tool.poetry]
name = "rate-generator"
version = "0.1.0"
description = ""
authors = ["Nikita.Kropantsev"]

[tool.poetry.dependencies]
python = "3.10.5"
fastapi = "^0.78.0"
SQLAlchemy = "^1.4.37"
alembic = "^1.8.0"
asyncpg = "^0.25.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
